syntax = "proto3";

package log.v1;

option go_package = "github.com/stonelike/api/log.v1";

message Record {
    bytes value = 1;
    uint64 offset = 2;
    uint64 term = 3;
    uint32 type = 4;
}

//streamは複数requestをまとめて処理してからresponseを返す等の用途で使う
service Log{
    rpc Produce(ProduceRequest) returns (ProduceResponse){}
    rpc Consume(ConsumeRequest) returns (ConsumeResponse){}
    rpc ProduceStream(stream ProduceRequest) returns (stream ProduceResponse){}
    rpc ConsumeStream(ConsumeRequest) returns (stream ConsumeResponse){}
    rpc GetServers(GetServersRequest) returns (GetServersResponse){}

}

message ProduceRequest {
    Record record = 1;
}

message ProduceResponse{
    uint64 offset = 1;
}


message ConsumeRequest {
    uint64 offset = 1;
    
}

message ConsumeResponse{
    Record record = 1;
}

message GetServersRequest {}

message GetServersResponse {
    repeated Server servers = 1;
}

message Server {
    string id = 1;
    string rpc_addr = 2;
    bool is_leader = 3;
}
